--- a/accounts/templates/login_page.html
+++ b/accounts/templates/login_page.html
@@ -17,12 +17,11 @@
       <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4">
         <div class="card border border-light-subtle rounded-3 shadow-sm">
           <div class="card-body p-3 p-md-4 p-xl-5">
-            <h2 class="fs-6 fw-normal text-center text-secondary mb-4">{% translate 'Sign in' %}</h2>
+            <h2 class="text-center mb-4">Se connecter</h2>
                 <form method="post">
                     {% csrf_token %}
                     {% bootstrap_form form %}
-                    {% bootstrap_button button_type="submit" content="Sign in" %}
-                </form>
+                    {% bootstrap_button button_type="submit" content="Se connecter" %}
           </div>
         </div>
       </div>
