--- a/cerfa_filler/templates/company_form.html
+++ b/cerfa_filler/templates/company_form.html
@@ -2,36 +2,58 @@
 {% extends 'base.html' %}
 {% load django_bootstrap5 i18n %}
 
-{% block title %}{% if object %}Edit{% else %}Create{% endif %} Company{% endblock %}
+{% block title %}
+  {% if object %}
+    Modifier une
+  {% else %}
+    Nouvelle
+  {% endif %}personne morale
+{% endblock %}
 
 {% block content %}
-<div class="container">
-    <h2>{% if object %}{% translate 'Edit' %}{% else %}{% translate 'Create' %}{% endif %} Company</h2>
-    <p class="text-muted">{% if object %}{{object.metadata}}{%endif%}</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+          <h2>
+            {% if object %}
+              Modifier une
+            {% else %}
+              Nouvelle
+            {% endif %}personne morale
+          </h2>
+          <p class="text-muted">
+            {% if object %}{{ object.metadata }}{% endif %}
+          </p>
+      </div>
 
-    {% bootstrap_messages %}
-    <form method="post">
-        {% csrf_token %}
-        {% bootstrap_form form layout='horizontal'  %}
-        {% bootstrap_button button_type="submit" content="OK" %}
+      <div class="row">
+        <div class="col-12">
+          {% bootstrap_messages %}
+          <form method="post">
+            {% csrf_token %}
+            {% bootstrap_form form layout='horizontal' %}
+            {% bootstrap_button button_type='submit' content='OK' %}
 
-        <a href="{% url 'cerfa_filler:companies-list' %}" class="btn btn-secondary">Cancel</a>
-    </form>
+            <a href="{% url 'cerfa_filler:companies-list' %}" class="btn btn-secondary">Cancel</a>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script>
+    const dateStart = document.getElementById('id_date_start')
+    const dateEnd = document.getElementById('id_date_end')
 
-    <script>
-        const dateStart = document.getElementById('id_date_start');
-        const dateEnd = document.getElementById('id_date_end');
+    if (dateStart.value === '') {
+      dateEnd.disabled = true
+    }
 
-        if (dateStart.value === '') {
-            dateEnd.disabled = true
-        }
-
-        dateStart.addEventListener('input', function() {
-            if (dateStart.value === '') {
-                dateEnd.disabled = true;
-            } else {
-                dateEnd.disabled = false;
-            }
-        });
-    </script>
-    {% endblock %}
+    dateStart.addEventListener('input', function () {
+      if (dateStart.value === '') {
+        dateEnd.disabled = true
+      } else {
+        dateEnd.disabled = false
+      }
+    })
+  </script>
+{% endblock %}
